# dex2024

./: .flake8  README.md  pyproject.toml
src/examples/: example_basic_test.py
src/examples/red_green_refactor/: green.py  red.py  refactor.py
src/jupyter/: workshop_dex_2024.ipynb
src/workshop_dex_2024_student/src/: create_grocery_list.py
tests/unit/: conftest.py  test_create_grocery_list.py
