[tool.poetry]
name = "workshop-dex-2024-student"
version = "0.1.0"
description = ""
authors = ["JariBurgers <jari.burgers@blenddata.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.3.3"
jupyter = "^1.1.1"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "unit: Unit tests.",
    "integration: Integration tests.",
]